--- a/styles/main.css
+++ b/styles/main.css
@@ -157,7 +157,7 @@
 		clear: both;
 		width: 85%;
 		margin: 0 auto;
-		padding: 150px 0 0 0;
+		padding: 0 0 0 0;
 	}
 
 	nav ul {
@@ -242,7 +242,7 @@
 	.content_div {
 		float: right;
 		width: 44%;
-		height: 525px;
+		height: 700px;
 		margin: 80px 10% auto 2.5%;
 	}
 
@@ -309,7 +309,7 @@
 	}
 
 	h1 {
-		width: 100%;
+		width: 90%;
 		margin: 0 auto; /************/
 		padding: 35px 0 0 0;
 		font-family: 'Montserrat', 'Roboto', Arial, sans-serif;
@@ -320,12 +320,14 @@
 	}
 
 	p {
+		width: 90%;
+		margin: 20px auto;
 		font-family: 'Roboto', Arial, sans-serif;
 		line-height: 1.8em;
 	}
 
 	p.last {
-		margin: 0 0 35px 0;
+		margin: 0 auto 35px auto;
 	}
 
 	.badge {
@@ -337,6 +339,12 @@
 	.badge.smaller {
 		padding: 10px 0 0 0;
 		width: 52%;
+	}
+
+	footer {
+		clear: both;
+		width: 100%;
+		height: 200px;
 	}
 
 	nav {
