--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 450px;
+		height: 500px;
 		background: white,
 		-webkit-linear-gradient(#637E9E, #426082);
 		background: -o-linear-gradient(#637E9E, #426082);
@@ -22,7 +22,7 @@
 
 	.gray {
 		position: absolute;
-		top: 450px;
+		top: 500px;
 		z-index: -1;
 		background: #F6F6F8;
 		width: 100%;
@@ -31,9 +31,9 @@
 
 	.phones_div {
 		display: block;
-		height: 100%;
+		height: 90%;
 		width: 70%;
-		margin: 250px auto 0 auto;
+		margin: 320px auto 0 auto;
 	}
 
 	.phones {
@@ -44,13 +44,13 @@
 
 	.content_div {
 		width: 90%;
-		height: 525px;
-		margin: 80px 10% auto 2.5%;
+		height: 500px;
+		margin: 50px auto;
 	}
 
 	.logo_banner {
 		width: 90%;
-		margin: 300px auto;
+		margin: 0px auto;
 	}
 
 	.logo_banner img {
@@ -62,17 +62,17 @@
 
 	.logo_banner button {
 		position: absolute;
-		width: 90%;
-		top: 150px;
-		margin: 10px 0px 10px 0;
-		padding: 10px 5px 10px 30px;
+		width: 80%;
+		top: 160px;
+		left: 10%;
+		padding: 30px 0 30px 30px;
 		border: 1px solid #3f5f7f;
 		border-radius: 3px;
 		background: -webkit-linear-gradient(#7791AD, #517295);
 		background: -o-linear-gradient(#7791AD, #517295);
 		background: linear-gradient(#7791AD, #517295D);
 		color: #F5F6F8;
-		font-size: 0.7em;
+		font-size: 1.5em;
 		font-weight: 500;
 		text-shadow: 0 1px 1px #3B5A7D;
 		box-shadow: 0 0 4px #3f5f7f;
@@ -100,9 +100,10 @@
 
 	.logo_banner button img {
 		position: absolute;
-		top: 8px;
-		left: 10px;
-		width: 22%;
+		top: 34px;
+		left: 34%;
+		width: 4%;
+		min-width: 20px;
 	}
 
 	.about {
@@ -120,73 +121,91 @@
 	}
 
 	h1 {
-		width: 100%;
-		margin: 0 auto; /************/
+		width: 80%;
+		margin: 0 auto; 
 		padding: 35px 0 0 0;
 		font-family: 'Montserrat', 'Roboto', Arial, sans-serif;
-		font-size: 1.6em;
+		font-size: 1.4em;
 		font-weight: 500;
 		line-height: 1.3em;
 		color: #334f73;
 	}
 
 	p {
+		width: 80%;
+		margin: 25px auto;
 		font-family: 'Roboto', Arial, sans-serif;
 		line-height: 1.8em;
 	}
 
 	p.last {
-		margin: 0 0 35px 0;
+		margin: 0 auto 35px auto;
 	}
 
 	.badge {
 		display: block;
 		margin: 0 auto;
-		width: 55%;
+		width: 50%;
 	}
 
 	.badge.smaller {
 		padding-top: 10px;
-		width: 52%;
+		width: 50%;
+	}
+
+	.badge img {
+		width: 100%;
 	}
 
 	footer {
 		clear: both;
 		width: 100%;
 		height: 100px;
-		padding: 150px 0 0 0;
+		padding: 120px 0 0 0;
 	}
 
 	nav {
 		clear: both;
-		width: 85%;
+		width: 100%;
 		margin: 0 auto;
 		padding: 0 0 0 0;
 	}
 
 	nav ul {
-		display: flex;
-		justify-content: space-around;
+		display: block;
 		width: 100%;
 		margin: 0 auto;
 		padding: 0;
 	}
 
 	nav ul li {
-		display: inline;
+		display: block;
 		list-style: none;
+		width: 100%;
 		text-align: center;
+		margin: 20px auto;
+		padding: 10px 0 10px 0;
 		text-transform: uppercase;
 		font-family: 'Montserrat', 'Roboto', 'Arial', sans-serif;
-		font-size: 0.8em;
+		font-size: 2.2em;
 		font-weight: 500;
 		letter-spacing: 0.05em;
 		color: #B4B4B4;
+		border-top: 1px solid #637E9E;
+		border-bottom: 1px solid #637E9E;
 	}
 
 	nav ul li a {
+		width: 100%;
 		text-decoration: none;
 		color: #5B799A;
+	}
+
+	.copyright {
+		padding: 25px 0;
+		font-size: 0.8em;
+		border-top: none;
+		border-bottom: none;
 	}
 }
 
